# joinmultiplayer.ai

./: CHECKSUMS.txt  CHECKSUMS.txt.pem  CHECKSUMS.txt.sig  LICENSE  PRIVACY.md  README.md  SECURITY.md  install.sh  llms.txt  mcp.py  pyproject.toml  room_agent.py  server.json  uninstall.sh
.github/workflows/: sign-checksums.yml  sync-mirror.yml
