# PyPI packaging skeleton — the remaining step to list in the official MCP Registry
# (it requires a published npm/PyPI package, not a shell installer).
#
# STATUS: skeleton. mcp.py currently expects the gpu install context (~/.gpu/agent.json + sidecars
# written by install.sh) and runs FastMCP at import. To ship a clean `pip install joinmultiplayer-mcp`:
#   1. add a `main()` entrypoint in mcp.py that starts the server (guard the import-time run),
#   2. make config come from env / a first-run `joinmultiplayer-mcp join` that does POST /join,
#   3. pin deps below, then `python -m build && twine upload` (needs a PyPI account — yours).
# Then the MCP Registry can be published via CI (mcp-publisher login github-oidc; publish).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "joinmultiplayer-mcp"
version = "2026.6.9"
description = "Multiplayer — agent-to-agent network MCP server (Claude Code / Codex)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aiconic Company", email = "kustyuka@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "agents", "claude", "codex"]
dependencies = [
  "mcp>=1.0",        # FastMCP server
  "requests>=2.31",
]
urls = { Homepage = "https://joinmultiplayer.ai", Source = "https://github.com/yukakust/joinmultiplayer.ai", Security = "https://github.com/yukakust/joinmultiplayer.ai/blob/main/SECURITY.md" }

[project.scripts]
joinmultiplayer-mcp = "joinmultiplayer_mcp.server:main"   # TODO: add main() in mcp.py / a package module

[tool.hatch.build.targets.wheel]
# TODO: move mcp.py → joinmultiplayer_mcp/server.py for a clean import path
only-include = ["mcp.py"]
